--- a/Clubhouse/web/update.xhtml
+++ b/Clubhouse/web/update.xhtml
@@ -37,8 +37,8 @@
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
                     <ul id="active" class="nav navbar-nav side-nav">
                         <li><h:outputLink value="admin.xhtml"><i class="fa fa-bullseye"></i> Database</h:outputLink></li>
-                        <li class="selected"><h:outputLink value="add.xhtml"><i class="fa fa-list-ol"></i> Add Facilites</h:outputLink></li>
-                        <li><h:outputLink value="update.xhtml"><i class="fa fa-list-ul"></i> Update Booking</h:outputLink></li>
+                        <li ><h:outputLink value="add.xhtml"><i class="fa fa-list-ol"></i> Add Facilites</h:outputLink></li>
+                        <li class="selected"><h:outputLink value="update.xhtml"><i class="fa fa-list-ul"></i> Update Booking</h:outputLink></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right navbar-user">
                         <li class="dropdown messages-dropdown">
@@ -87,18 +87,18 @@
             </nav> 
             <h:form>
                 <div class="row text-center">
-                    <h2>Add Facility</h2>
+                    <h2>Update Booking</h2>
                 </div>
                 <div>
 
                     <div>
                         <label for="facilitiesList" class="col-md-2">
-                            Select a facility:
+                            Input Customer ID:
                         </label>            
                         <div class="col-md-9">
-                            <h:selectOneMenu id="facilitiesList" value="#{manage.type}" class="form-control">
-                                <f:selectItems value="#{manage.availableItems.entrySet()}" var="entry" itemValue="#{entry.key}" itemLabel="#{entry.value}" />
-                            </h:selectOneMenu>
+                            <h:inputText id="id" p:placeholder="Enter Customer ID" class="form-control" value="#{update.custid}">
+                                <f:ajax event="keyup" execute="id" render="name"/>
+                            </h:inputText>
                         </div>
                         <div class="col-md-1">
                             <i class="fa fa-lock fa-2x"></i>
@@ -109,78 +109,30 @@
                             Name:
                         </label>
                         <div class="col-md-9">
-                            <h:inputText id="name" value="#{manage.nameadd}" p:placeholder="Enter a Name" class="form-control"/>
+                            <h:selectOneMenu id="name" value="#{update.bookid}" class="form-control">
+                                <f:selectItems value="#{update.availableItems}" var="entry" itemValue="#{entry.key}" itemLabel="#{entry.value}" />
+                            </h:selectOneMenu>
                         </div>
                         <div class="col-md-1">
                             <i class="fa fa-lock fa-2x"></i>
                         </div>
                     </div>
                     <div>
-                        <label for="location" class="col-md-2">
-                            Location:
+                        <label for="status" class="col-md-2">
+                            Status:
                         </label>
                         <div class="col-md-9">
-                            <h:inputText id="location" value="#{manage.location}" p:placeholder="Enter a Location" class="form-control"/>
-                        </div>
-                        <div class="col-md-1">
-                            <i class="fa fa-lock fa-2x"></i>
-                        </div>
-                    </div>
-                    <div>
-                        <label for="date" class="col-md-2">
-                            Date:
-                        </label>
-                        <div class="col-md-9">
-                            <h:inputText id="date" value="#{manage.date}" p:placeholder="Enter a Date with yyyy-MM-dd" class="form-control">
-                                <f:convertDateTime pattern="yyyy-MM-dd"/>  
-                            </h:inputText>
-                            <h:message for="date" style="color:red" />
-                        </div>
-                        <div class="col-md-1">
-                            <i class="fa fa-lock fa-2x"></i>
-                        </div>
-                    </div>
-                    <div>
-                        <label for="open" class="col-md-2">
-                            Start Time:
-                        </label>
-                        <div class="col-md-9">
-                            <h:inputText id="open" value="#{manage.open}" p:placeholder="Enter a Date with hh:mm:ss" class="form-control"/> 
-                            <h:message for="open" style="color:red" />
-                        </div>
-                        <div class="col-md-1">
-                            <i class="fa fa-lock fa-2x"></i>
-                        </div>
-                    </div>
-                    <div>
-                        <label for="end" class="col-md-2">
-                            End Time:
-                        </label>
-                        <div class="col-md-9">
-                            <h:inputText id="end" value="#{manage.end}" p:placeholder="Enter a time with hh:mm:ss" class="form-control"/>
-                            <h:message for="end" style="color:red" />
-                        </div>
-                        <div class="col-md-1">
-                            <i class="fa fa-lock fa-2x"></i>
-                        </div>
-                    </div>
-                    <div>
-                        <label for="limit" class="col-md-2">
-                            Limit:
-                        </label>
-                        <div class="col-md-9">
-                            <h:inputText id="limit" value="#{manage.limit}" p:placeholder="Enter a number of people can select" class="form-control">
-                                <f:convertNumber integerOnly="true"/>
-                                <f:validateLongRange minimum="1" maximum="100"/>
-                            </h:inputText>
-                            <h:message for="limit" style="color:red" />
+                            <h:selectOneMenu id="status" value="#{update.status}" class="form-control">
+                                <f:selectItem itemValue="used" itemLabel="Used" />
+                                <f:selectItem itemValue="cancel" itemLabel="Cancel" />                          
+                            </h:selectOneMenu>
                         </div>
                         <div class="col-md-1">
                             <i class="fa fa-lock fa-2x"></i>
                         </div>
                     </div>
                     <div class="row">
-                        <h:commandButton value="Add" class="btn btn-info" action="#{manage.add()}"/>
+                        <h:commandButton class="btn btn-info" value="Update" action="#{update.change}"/>
                         <h:messages globalOnly="true" style="color: red"/>
                     </div>
                 </div>
