--- a/Clubhouse/web/admin.xhtml
+++ b/Clubhouse/web/admin.xhtml
@@ -20,7 +20,7 @@
         <link id="gridcss" rel="stylesheet" type="text/css" href="http://www.shieldui.com/shared/components/latest/css/dark-bootstrap/all.min.css" />
         <script type="text/javascript" src="http://www.shieldui.com/shared/components/latest/js/shieldui-all.min.js"></script>
         <script type="text/javascript" src="http://www.prepbootstrap.com/Content/js/gridData.js"></script>
-           
+
     </h:head>
     <h:body>
         <div id="wrapper">
@@ -200,7 +200,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Gym Rooms Booking</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="bbqsbooking" cellspacing="0" width="100%" >
+                                <table id="gymsbooking" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Booking ID</th>
@@ -245,7 +245,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Swimming Pools Booking</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="bbqsbooking" cellspacing="0" width="100%" >
+                                <table id="poolsbooking" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Booking ID</th>
@@ -290,7 +290,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Sauna Rooms Booking</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="bbqsbooking" cellspacing="0" width="100%" >
+                                <table id="saunasbooking" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Booking ID</th>
@@ -335,7 +335,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Study Rooms Booking</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="bbqsbooking" cellspacing="0" width="100%" >
+                                <table id="studysbooking" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Booking ID</th>
@@ -380,7 +380,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Complaints</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="complaint" cellspacing="0" width="100%" >
+                                <table id="complaints" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Complaint ID</th>
@@ -413,7 +413,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> BBQs</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="complaint" cellspacing="0" width="100%" >
+                                <table id="bbqs" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>BBQ ID</th>
@@ -458,7 +458,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Gym Rooms</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="complaint" cellspacing="0" width="100%" >
+                                <table id="gyms" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Gym Room ID</th>
@@ -503,7 +503,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Swimming Pools</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="complaint" cellspacing="0" width="100%" >
+                                <table id="pools" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Swimming Pool ID</th>
@@ -548,7 +548,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Sauna Rooms</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="complaint" cellspacing="0" width="100%" >
+                                <table id="saunas" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Sauna Room ID</th>
@@ -593,7 +593,7 @@
                                 <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Study Rooms</h3>
                             </div>
                             <div class="panel-body">
-                                <table id="complaint" cellspacing="0" width="100%" >
+                                <table id="studys" cellspacing="0" width="100%" >
                                     <thead>
                                         <tr>
                                             <th>Study Room ID</th>
