--- a/Clubhouse/web/adminlogin.xhtml
+++ b/Clubhouse/web/adminlogin.xhtml
@@ -160,9 +160,9 @@
         <br/>
         <h:form>
             <div class="login">
-                <h:inputText styleClass="text-username" id="username" value="#{login.username}" p:placeholder="Username"/><br/>               
-                <h:inputSecret styleClass="text-password" id="password" value="#{login.password}" p:placeholder="Password"/><br/>
-                <h:commandButton styleClass="commandbutton" value="Login" action="#{login.validAdmin()}" />
+                <h:inputText styleClass="text-username" id="username" value="#{loginR.username}" p:placeholder="Username"/><br/>               
+                <h:inputSecret styleClass="text-password" id="password" value="#{loginR.password}" p:placeholder="Password"/><br/>
+                <h:commandButton styleClass="commandbutton" value="Login" action="#{loginR.validAdmin()}" />
             </div>
             <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         </h:form>
